<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="info_header_section1">FAQs</string>
    <string name="info_header_section2">Privacy</string>
    <string name="info_header_section3">Medical</string>
    <string name="info_header_section4">Consent</string>
    <string name="info_header_section5">Withdraw</string>
    <string name="tutorial_title_section1">Section 1</string>
    <string name="tutorial_title_section2">Section 2</string>
    <string name="tutorial_title_section3">Section 3</string>
    <string name="tutorial_title_section4">Section 4</string>
    <string name="tutorial_title_section5">Section 5</string>
    <string name="tutorial_title_section6">Section 6</string>
    <string name="tutorial_title_section7">Section 7</string>
    <string name="tutorial_title_section8">Section 8</string>
    <string name="tutorial_title_section9">Section 9</string>
    <string name="tutorial_title_section10">Section 10</string>
    <string name="tutorial_title_section11">Section 11</string>
    <string name="fragment_opt_out_title">Withdraw Research Participation</string>
    <string name="fragment_opt_out_body">If you have reviewed our informed consent form and wish to withdraw your participation from research please select the button below. Please note that all future balance results will not be used for research purposes. If you still have concerns please contact us at myankle@utoronto.ca.</string>
    <string name="fragment_opt_out_accept">I wish to withdraw</string>
    <string name="fragment_agreement_title_1">Privacy Agreement</string>
    <string name="fragment_agreement_title_2">Medical Disclaimer</string>
    <string name="fragment_agreement_title_3">Informed Consent for Research Participation</string>
    <string name="fragment_agreement_body_1">@string/privacy_policy</string>
    <string name="fragment_agreement_body_2">@string/medical_disclaimer</string>
    <string name="fragment_agreement_body_3">@string/informed_concent</string>
    <string name="fragment_agreement_accept_text">I accept the above terms</string>
    <string name="calibration_initial_alert_title">Calibration</string>
    <string name="calibration_initial_alert_message">myAnkle needs to calibrate your phone to accurately measure your balance. Simply follow the on-screen instructions. This will only take a few seconds.</string>
    <string name="calibration_initial_alert_positive_button">Start Calibration</string>
    <string name="calibration_error_alert_title">Acceleration in getActivity() axis is really off. Please try again!</string>
    <string name="calibration_error_alert_positive_button">Back to Title</string>
    <string name="calibration_done_alert_title">Calibration Complete</string>
    <string name="calibration_done_alert_positive_button">Do some exercises!</string>
    <string name="calibration_back_alert_title">"Stop Calibrating?"</string>
    <string name="calibration_back_alert_positive_button">Yes</string>
    <string name="calibration_back_alert_negitive_button">No</string>
    <string name="calibration_instruction_1">On a flat level surface put the phone down with the screen up</string>
    <string name="calibration_instruction_2">Put the phone on it’s left edge</string>
    <string name="calibration_instruction_3">Put the phone in it’s bottom edge</string>
    <string name="calibration_instruction_4">Put the phone on it’s right edge</string>
    <string name="calibration_instruction_5">Put the phone on it’s top edge</string>
    <string name="calibration_instruction_6">Put the phone screen down</string>
    <string name="calibration_status_good">Good, right there!</string>
    <string name="calibration_status_not_good">Please position device</string>
    <string name="exercise_countdown_subtitle">Now is the time to attach the device to your ankle</string>
    <string name="exercise_messure_subtitle">If you can read this the device is not strapped to your ankle :(, you should slide to cancel and try again!</string>
    <string name="exercise_countdown_title">Starting Soon</string>
    <string name="exercise_messure_title">Now Measuring</string>
    <string name="exercise_change_selection">Change Selection</string>
    <string name="exercise_current_selection">Current Selection</string>
    <string name="exercise_dialog_eye_open_desc">Eyes Open</string>
    <string name="exercise_dialog_eye_closed_desc">Eyes Closed</string>
    <string name="exercise_dialog_title">Exercise Mode</string>
    <string name="info_title_section1">Frequently Asked Question</string>
    <string name="info_title_section2">Privacy Policy</string>
    <string name="info_title_section3">Medical Disclaimer</string>
    <string name="info_title_section4">Informed Consent</string>
    <string name="info_content_section1">@string/faq</string>
    <string name="info_content_section2">@string/privacy_policy</string>
    <string name="info_content_section3">@string/medical_disclaimer</string>
    <string name="info_content_section4">@string/informed_concent</string>
    <string name="profile_question_title">Update Profile</string>
    <string name="profile_question_body">In order for your results to be useful for research we need a few basic pieces of information about you.\n</string>
    <string name="profile_question_0_body">Name</string>
    <string name="profile_question_1_body">Age</string>
    <string name="profile_question_2_body">Gender</string>
    <string name="profile_question_2_radio1">Male</string>
    <string name="profile_question_2_radio2">Female</string>
    <string name="profile_questions_button_bar_discard">Discard</string>
    <string name="profile_questions_button_bar_next">Next</string>
    <string name="profile_injuries_title_create">Record Ankle Injury</string>
    <string name="profile_injuries_title_update">Record New Injury</string>
    <string name="profile_injuries_body_create">Indicate any ankle injuries you sustained in the past 6 months. This information is used to structure your treatment plan in the future.\n</string>
    <string name="profile_injuries_body_update">Record any new ankle injury you sustained recently. The injury date must be after the most recent date on record.\n</string>
    <string name="profile_question_3_body">Injured ankle in the last 6 months?</string>
    <string name="profile_question_label_left_ankle">Left Ankle</string>
    <string name="profile_question_label_right_ankle">Right Ankle</string>
    <string name="profile_injuries_select_date">Select Date</string>
    <string name="profile_question_button_bar_finish">Finish</string>
    <string name="profile_question_button_bar_restart">Restart</string>
    <string name="profile_questions_injury_alert_title">Warning</string>
    <string name="profile_questions_injury_alert_messagee">Due to your recent ankle injury myAnkle strongly recommends caution with all balance exercises and avoid all that cause pain or discomfort. myAnkle recommends that you avoid all of the "hard" and "very hard" balance exercises.</string>
    <string name="profile_questions_injury_alert_positive_button">I understand</string>
    <string name="profile_delete_warning_title">Delete User</string>
    <string name="profile_delete_warning_desc">Clicking \'Delete User\' will permanently delete this user account and all associated edu.utoronto.cimsah.myankle.Data, including exercise sessions and injury dates. This cannot be un-done.</string>
    <string name="profile_delete_warning_confirm">I understand</string>
    <string name="title_welcome_text">Welcome!\nLet\'s get started</string>
    <string name="title_start_button">Measure my balance</string>
    <string name="title_progress_button">View my progress</string>
    <string name="title_tutorial_button">Tutorial</string>
    <string name="tutorial_finish_title">Now let\'s measure your balance!</string>
    <string name="tutorial_finish_button_bar_consent">Consent</string>
    <string name="tutorial_finish_button_bar_do_not_consent">Exit</string>
    <string name="tutorial_start_title">myAnkle</string>
    <string name="tutorial_start_logo_contentdescription">application logo of a foot</string>
    <string name="tutorial_start_copy">The app designed by a physical therapist to improve your balance!</string>
    <string name="tutorial_description_step1">Choose from a variety of exercises</string>
    <string name="tutorial_description_step2">Secure the device</string>
    <string name="tutorial_description_step3">Measure your Balance Number (BN)</string>
    <string name="tutorial_description_step4">Improve!</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_profile">Update Profile</string>
    <string name="menu_item_calibration">Calibration</string>
    <string name="menu_item_info">Info</string>
    <string name="menu_item_user_id">Show User Id</string>
    <string name="menu_item_research">Research</string>
    <string name="menu_item_connect">Connect</string>
    <string name="app_name">myAnkle</string>
    <string name="dialog_ok">OK</string>
    <string name="instruction_content_description">An image to show how the exercise should be performed.</string>
    <string name="instruction_button">Start measuring!</string>
    <string name="noop">Calibrating</string>
    <string name="calibration_content_description">An image showing how to orient the device in the 6 axis.</string>
    <string name="measure_seekbar_label">Slide to Stop</string>
    <string name="results_back_to_exercises_button">New exercise</string>
    <string name="results_retry_exercise_button">Retry exercise</string>
    <string name="app_info">Nothing to do here!</string>
    <string name="contentDescription_exercise_row_icon">exercise icon</string>
    <string name="exercise_results_message">Remember a lower BN is better!</string>
    <string name="login_login">Login</string>
    <string name="login_create_user">Create User</string>
</resources>