<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/fragment_login_image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/myankle_text_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/extra_large_margin"
            android:paddingRight="@dimen/extra_large_margin"
            android:paddingBottom="@dimen/extra_large_margin"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/fragment_login_spinner_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <requestFocus />
            </Spinner>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_margin" />

            <Button
                android:id="@+id/fragment_login_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/login_login"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/fragment_login_button_create_user"
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        android:text="@string/login_create_user"
        android:textColor="@color/white" />

</RelativeLayout>
